--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Sections -->
   <section id="home"><a href="https://github.com/chrisBalher" target="_blank">Chris Balher Design</a>      
     <p id="nombre">Anderson Zelarayan </p>
-    <p id="seudonimo">el Artista de la brocha romantica</p>
+    <p id="seudonimo"> Artista - Escultor - Dibujante</p>
   </section>
   <section id="about"><h1>Acerca de mi</h1>
   </section>
