--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="bar3"></div>
   </div>
   <!-- Sections -->
-  <section id="home"><a href="https://github.com/chrisBalher" target="_blank">Chris Balher Design</a>      
+  <section id="home">   
     <p id="nombre">Anderson Zelarayan </p>
     <p id="seudonimo"> Artista - Escultor - Dibujante</p>
   </section>
