cambiados colores y terminada seccion acerca de

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Menu de Navegación Animado</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="style.css">
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 </head>
 <body>
   <!-- Menu Overlay -->
@@ -39,15 +40,74 @@
   </div>
   <!-- Sections -->
   <section id="home">   
-    <p id="nombre">Anderson Zelarayan </p>
-    <p id="seudonimo"> Artista - Escultor - Dibujante</p>
+    <p id="nombre">Anderson Zelarayan Navarro</p>
+
   </section>
-  <section id="about"><h1>Acerca de mi</h1>
+  <section id="about">
+    <h1>ACERCA DE MI</h1>
+    <span class="section-container">
+      <span class="item">
+        <h2>Experiencia</h2>
+          <ul class="item-content">
+            <li>Mould Design Engineer</li>
+            <li>O-I</li>
+            <li>Sep-2016-Actualidad(4 años 5 meses)</li>
+          </ul>
+          <ul class="item-content">
+            <li>Mould Design Intern</li>
+            <li>O-I</li>
+            <li>Jul. 2015-Jun. 2016 (1 Año)</li>
+          </ul>
+          <ul class="item-content">
+            <li>INSTRUCTOR</li>
+            <li>Pontificia Universidad Católica - PUCP</li>
+            <li>Ago. 2014-Dic. 2014 (1 Año)</li>
+          </ul>
+      </span>
+      <span class="item">
+        <h2>Educacion</h2>
+        <ul class="item-content">
+          <li>Pontificia Universidad Católica - PUCP</li>
+          <li>Ingeniería Mecatrónica</li>
+          <li>2010-201<s>5</s>6</li>
+        </ul>
+      </span>
+      <span class="item">
+        <h2>Aptitudes y validaciones</h2>
+        <span class="item-columnas item-content  ">
+          <ul >
+            <li>Matlab</li>
+            <li>C++</li>
+            <li>Autodesk Inventor</li>
+            <li>Visual Studio</li>
+          </ul>
+          <ul >
+            <li>Docencia</li>
+            <li>Trabajo en equipo</li>
+            <li>Eagle PCB</li>
+            <li>ACL programming</li>
+            <li>Programación CNC</li>
+          </ul>
+        </span>
+      </span>
+      <span class="item">
+        <h2>Logros</h2>
+        <span class="item-content item-columnas">
+          <p class="item-content-columna1">IDIOMAS:</p>
+          <ul>
+            <li>Español</li>
+            <li>Ingles</li>
+          </ul>
+        </span>
+      </span>
+    </span>
+    
   </section>
   <section id="skills"><h1>Habilidades</h1></section>
   <section id="projects"><h1>Proyectos</h1></section>
   <section id="contact"><h1>Contacto</h1></section>
   <!-- Script -->
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+  <!-- <script type="module" src="wordcloud.js"></script> -->
 </body>
 </html>
