fixed padding margin

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <!-- Sections -->
   <section id="home">   
-    <p id="nombre">Anderson Zelarayan Navarro</p>
+    <h1 class="home-titulo">Anderson Zelarayan Navarro</h1>
 
   </section>
   <section id="about">
@@ -74,15 +74,16 @@
       </span>
       <span class="item">
         <h2>Aptitudes y validaciones</h2>
-        <span class="item-columnas item-content  ">
+        <span class="item-columnas item-content">
           <ul >
             <li>Matlab</li>
             <li>C++</li>
             <li>Autodesk Inventor</li>
             <li>Visual Studio</li>
+            <li>Docencia</li>
           </ul>
           <ul >
-            <li>Docencia</li>
+            
             <li>Trabajo en equipo</li>
             <li>Eagle PCB</li>
             <li>ACL programming</li>
@@ -94,7 +95,7 @@
         <h2>Logros</h2>
         <span class="item-content item-columnas">
           <p class="item-content-columna1">IDIOMAS:</p>
-          <ul>
+          <ul class="item-content-columna2">
             <li>Español</li>
             <li>Ingles</li>
           </ul>
