--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
 
   </section>
   <section id="about">
-    <h1>ACERCA DE MI</h1>
+    <h1>ABOUT ME</h1>
     <span class="section-container">
       <span class="item">
-        <h2>Experiencia</h2>
+        <h2>EXPERIENCIA</h2>
           <ul class="item-content">
             <li>Mould Design Engineer</li>
             <li>O-I</li>
-            <li>Sep-2016-Actualidad(4 años 5 meses)</li>
+            <li>Sep/2016-Actualidad</li>
           </ul>
           <ul class="item-content">
             <li>Mould Design Intern</li>
             <li>O-I</li>
-            <li>Jul. 2015-Jun. 2016 (1 Año)</li>
+            <li>Jul/2015-Jun/2016 </li>
           </ul>
           <ul class="item-content">
             <li>INSTRUCTOR</li>
-            <li>Pontificia Universidad Católica - PUCP</li>
-            <li>Ago. 2014-Dic. 2014 (1 Año)</li>
+            <li>Pontificia Universidad Católica del Perú</li>
+            <li>Ago/2014-Dic/2014</li>
           </ul>
       </span>
       <span class="item">
-        <h2>Educacion</h2>
+        <h2>EDUCACION</h2>
         <ul class="item-content">
           <li>Pontificia Universidad Católica - PUCP</li>
           <li>Ingeniería Mecatrónica</li>
           <li>2010-2015</li>
         </ul>
       </span>
-      <span class="item">
+      <!-- <span class="item">
         <h2>Aptitudes y validaciones</h2>
         <span class="item-columnas item-content">
           <ul >
@@ -90,8 +90,8 @@
             <li>Programación CNC</li>
           </ul>
         </span>
-      </span>
-      <span class="item">
+      </span> -->
+      <!-- <span class="item">
         <h2>Logros</h2>
         <span class="item-content item-columnas">
           <p class="item-content-columna1">IDIOMAS:</p>
@@ -100,11 +100,11 @@
             <li>Ingles</li>
           </ul>
         </span>
-      </span>
+      </span> -->
     </span>
     
   </section>
-  <section id="skills"><h1>Habilidades</h1></section>
+  <section id="skills"><h1>Biografia</h1></section>
   <section id="projects"><h1>Proyectos</h1></section>
   <section id="contact"><h1>Contacto</h1></section>
   <!-- Script -->
