--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
 
   </section>
   <section id="about">
-    <h1>ABOUT ME</h1>
+    <h1>HOJA DE VIDA</h1>
     <span class="section-container">
       <span class="item">
         <h2>EXPERIENCIA</h2>
           <ul class="item-content">
-            <li>Mould Design Engineer</li>
+            <li>Global Mould Design Engineer</li>
             <li>O-I</li>
             <li>Sep/2016-Actualidad</li>
           </ul>
           <ul class="item-content">
-            <li>Mould Design Intern</li>
+            <li>Global Mould Design Intern</li>
             <li>O-I</li>
             <li>Jul/2015-Jun/2016 </li>
           </ul>
           <ul class="item-content">
-            <li>INSTRUCTOR</li>
+            <li>Instructor de Laboratorio de Manufactura Integrada por Computadora</li>
             <li>Pontificia Universidad Católica del Perú</li>
             <li>Ago/2014-Dic/2014</li>
           </ul>
       </span>
       <span class="item">
-        <h2>EDUCACION</h2>
+        <h2>EDUCACIÓN</h2>
         <ul class="item-content">
           <li>Pontificia Universidad Católica - PUCP</li>
           <li>Ingeniería Mecatrónica</li>
