--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
   <section id="contact"><h1>Contacto</h1>
     <div class="social-links">
 
-      <a href="#" target="_blank">
+      <a href="https://www.linkedin.com/in/anderson-zelarayan-navarro-1ba4a67a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTZ%2BGA92kSb6%2FY%2F6mNUOYYw%3D%3D" target="_blank">
         <i class="fa fa-linkedin fa-inverse"></i>
       </a>
-      <a href="#" target="_blank">
+      <a href="https://facebook.com/anderson.zelarayan" target="_blank">
         <i class="fa fa-facebook fa-inverse "></i>
       </a>  
-      <a href="#" target="_blank">
+      <a href="https://instagram.com/andersonzelarayan" target="_blank">
         <i class="fa fa-instagram fa-inverse "></i>
       </a>  
-      <a href="#" target="_blank">
+      <a href="mailto:anderson.zelarayan@gmail.com" target="_blank">
         <i class="fa fa-envelope fa-inverse "></i>
       </a>  
 
