--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="footer">
       <p class="footer__text">
-        © 2020 - developed by <a href="https://github.com/chrisBalher" target="_blank">ABCplastina</a>
+        © 2020 - developed by <a href="https://github.com/chrisBalher" target="_blank">ABCplastilina</a>
         </a>
       </p>
     </div>
