--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <nav>
       <ul>
         <li id="nav-1" class="slide-out-1">
-          <a href="#home" >Home</a>
+          <a  href="#home" >Home</a>
         </li>
         <li id="nav-2" class="slide-out-2">
-          <a href="#about" >Hoja de vida </a>
+          <a  href="#about" >Hoja de vida </a>
         </li>
         <li id="nav-3" class="slide-out-3">
-          <a href="#skills" >Biografía</a>
+          <a  href="#skills" >Biografía</a>
         </li>
         <li id="nav-4" class="slide-out-4">
-          <a href="#projects" >Proyectos</a>
+          <a  href="#projects" >Proyectos</a>
         </li>
         <li id="nav-5" class="slide-out-5">
-          <a href="#contact" >Contacto</a>
+          <a  href="#contact" >Contacto</a>
         </li>
       </ul>
     </nav>
@@ -79,7 +79,7 @@
     <h1>Biografia</h1>
     <span class="section-container">
       <div class="item-flex2 margin-strech">
-        <p >pariatur autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas <img class="bio-image" src="./src/art1.PNG" alt="bio">  repellendus dignissimos porro quos Lorem ipsum dolor sit una awdaw n awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
+        <p class="parrafo1" >pariatur autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas <img class="bio-image" src="./src/art1.PNG" alt="bio">  repellendus dignissimos porro quos Lorem ipsum dolor sit una awdaw n awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
       </div>
       <div class="item-flex2 margin-strech">
@@ -89,7 +89,23 @@
     </span>
   </section>
   
-  <section id="projects"><h1>Proyectos</h1></section>
+  <section id="projects"><h1>Proyectos</h1>
+    <ul class="gallery">
+      <li>
+        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+      </li>
+      <li>
+        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+      </li>
+      <li>
+        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+      </li>
+      <li>
+        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+      </li>
+    </ul>
+  </section>
+
   <section id="contact"><h1>Contacto</h1>
     <div class="social-links">
 
