--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   </section>
   
   <section id="skills">
-    <h1>Biografia</h1>
+    <h1>Biografía</h1>
     <span class="section-container">
       <div class="item-flex2 margin-strech">
-        <p class="parrafo1" >pariatur autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas <img class="bio-image" src="./src/art1.PNG" alt="bio">  repellendus dignissimos porro quos Lorem ipsum dolor sit una awdaw n awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
+        <p class="parrafo1" >pariatur  elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas  repellendus Lorem ipsum dolor sit una awdaw n  <img class="bio-image" src="./src/art1.PNG" alt="bio">autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
       </div>
       <div class="item-flex2 margin-strech">
