--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
         <h2>EXPERIENCIA</h2>
           <ul class="item-content">
             <li>Global Mould Design Engineer</li>
-            <li>O-I</li>
+            <li><a href="#">O-I</a></li>
             <li>Sep/2016-Actualidad</li>
           </ul>
           <ul class="item-content">
             <li>Global Mould Design Intern</li>
-            <li>O-I</li>
+            <li><a href="https://www.o-i.com/">O-I</a></li>
             <li>Jul/2015-Jun/2016 </li>
           </ul>
           <ul class="item-content">
             <li>Instructor de Laboratorio de Manufactura Integrada por Computadora</li>
-            <li>Pontificia Universidad Católica del Perú</li>
+            <li><a href="https://www.pucp.edu.pe/">Pontificia Universidad Católica del Perú</a></li>
             <li>Ago/2014-Dic/2014</li>
           </ul>
       </div>
       <div class="item-flex2">
         <h2 id="item-titulo2">EDUCACIÓN</h2>
         <ul class="item-content">
-          <li>Pontificia Universidad Católica - PUCP</li>
+          <li><a href="https://www.pucp.edu.pe/">Pontificia Universidad Católica del Perú</a></li>
           <li>Ingeniería Mecatrónica</li>
           <li>2010-2015</li>
         </ul>
@@ -89,7 +89,7 @@
     </span>
   </section>
   
-  <section id="projects"><h1>Proyectos</h1>
+  <section id="projects"><h1>Fotos</h1>
     <ul class="gallery">
       <li>
         <img class="pro-image" src="./src/art1.PNG" alt="bio">
