--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h1>Biografía</h1>
     <span class="section-container">
       <div class="item-flex2 margin-strech">
-        <p class="parrafo1" >pariatur  adaw dwa aw daw awdaw daw  awdadwa jnalwdlkm;l,a ladmwdmawlkdm a elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas  repellendus Lorem ipsum dolor sit una awdaw n  <img class="bio-image" src="./src/portada1.JPG" alt="bio">autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
+        <p class="parrafo1" >pariatur  adaw dwa aw daw awdaw daw  awdadwa jnalwdlkm;l,a ladmwdmawlkdm a elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas  repellendus Lorem ipsum dolor sit una awdaw n  <img class="bio-image" src="./src/portada2.JPG?w=500&h=500&fit=crop" alt="bio">autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
       </div>
       <div class="item-flex2 margin-strech">
@@ -92,16 +92,16 @@
   <section id="projects"><h1>Fotos</h1>
     <ul class="gallery">
       <li>
-        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+        <img class="pro-image" src="./src/portada2.JPG?w=400&h=400&fit=crop" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+        <img class="pro-image" src="./src/portada1.JPG?w=400&h=400&fit=crop" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+        <img class="pro-image" src="./src/portada1.JPG?w=400&h=400&fit=crop" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="./src/art1.PNG" alt="bio">
+        <img class="pro-image" src="./src/portada2.JPG?w=400&h=400&fit=crop" alt="bio">
       </li>
     </ul>
   </section>
