./src sin el . no funciona

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     <span class="section-container">
       <div class="item-flex2 margin-strech">
         <p class="parrafo1" >pariatur  adaw dwa aw daw awdaw daw  awdadwa jnalwdlkm;l,a ladmwdmawlkdm a elit. Blanditiis iure assumenda eum. Sint iusto quisquam rem. Sequi autem iure ratione dolorem voluptas vero impedit eveniet unde, harum optio ducimus alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas  repellendus Lorem ipsum dolor sit una awdaw n  
-          <img class="bio-image" src="/src/portada2-300.jpg" 
-            srcset="/src/portada2-300.jpg 322w,
-                  /src/portada2-650.jpg 643w,
-                  /src/portada2-1250.jpg 1286w"
+          <img class="bio-image" src="./src/portada2-300.jpg" 
+            srcset="./src/portada2-300.jpg 322w,
+                  ./src/portada2-650.jpg 643w,
+                  ./src/portada2-1250.jpg 1286w"
             alt="bio" >
           autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
@@ -98,28 +98,28 @@
   <section id="projects"><h1>Fotos</h1>
     <ul class="gallery">
       <li>
-        <img class="pro-image" src="/src/portada2-300.jpg" 
-        srcset="/src/portada2-300.jpg 322w,
-              /src/portada2-650.jpg 643w,
-              /src/portada2-1250.jpg 1286w" alt="bio">
+        <img class="pro-image" src="./src/portada2-300.jpg" 
+        srcset="./src/portada2-300.jpg 322w,
+              ./src/portada2-650.jpg 643w,
+              ./src/portada2-1250.jpg 1286w" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="/src/portada1-300.jpg" 
-        srcset="/src/portada1-300.jpg 322w,
-              /src/portada1-650.jpg 643w,
-              /src/portada1-2500.jpg 2571w" alt="bio">
+        <img class="pro-image" src="./src/portada1-300.jpg" 
+        srcset="./src/portada1-300.jpg 322w,
+              ./src/portada1-650.jpg 643w,
+              ./src/portada1-2500.jpg 2571w" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="/src/portada1-300.jpg" 
-        srcset="/src/portada1-300.jpg 322w,
-              /src/portada1-650.jpg 643w,
-              /src/portada1-2500.jpg 2571w" alt="bio">
+        <img class="pro-image" src="./src/portada1-300.jpg" 
+        srcset="./src/portada1-300.jpg 322w,
+              ./src/portada1-650.jpg 643w,
+              ./src/portada1-2500.jpg 2571w" alt="bio">
       </li>
       <li>
-        <img class="pro-image" src="/src/portada2-300.jpg" 
-        srcset="/src/portada2-300.jpg 322w,
-              /src/portada2-650.jpg 643w,
-              /src/portada2-1250.jpg 1286w" alt="bio">
+        <img class="pro-image" src="./src/portada2-300.jpg" 
+        srcset="./src/portada2-300.jpg 322w,
+              ./src/portada2-650.jpg 643w,
+              ./src/portada2-1250.jpg 1286w" alt="bio">
       </li>
     </ul>
   </section>
