despues de pull

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       
     </span>
   </section>
-  
+  <!-- Seccion Galleria de fotos -->
   <section id="projects"><h1>Fotos</h1>
     <ul class="gallery">
       <li>
