margen-top a secciones y estilos a galeria

--- a/index.html
+++ b/index.html
@@ -85,43 +85,43 @@
                   ./src/portada2-650.jpg 643w,
                   ./src/portada2-1250.jpg 1286w"
             alt="bio" >
-          autem tempora. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
+          Lorem ipsum dolor Esse, ipsam unde! Laborum sed, aut repudiandae amet similique, atque tempora tempore et debitis. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
       </div>
       <div class="item-flex2 margin-strech">
-        <p id="item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quo reiciendis consequatur, corrupti animi neque magni dolore voluptatibus laboriosam ea iusto vel nostrum iure reprehenderit odit esse sit labore? Magni. ipss totam voluptas voluptatum? Repellat adipisci architecto voluptatem cupiditate dolore harum porro modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit explicabo lore ducimus itaque doloremque odio reprehenderit placeat dicta, dolor quam rem eius. Similique non nulla placeat perspiciatis, odio pariatur autem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis aw wd sdfsd fs aw ads a ssadsgfg rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas repellendus dignissimos porro quos repudiandae praesentium ipsum. </p>
+        <p id="item-text">Lorem ipsum dolor lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae repellendus nemo architecto ducimus, dicta quaerat iste magni fuga? Velit quia excepturi voluptate eos natus fugiat minus ut, odio debitis laudantium? sit amet consectetur adipisicing elit. Facilis quo reiciendis consequatur, corrupti animi neque magni dolore voluptatibus laboriosam ea iusto vel nostrum iure reprehenderit odit esse sit labore? Magni. ipss totam voluptas voluptatum? Repellat adipisci architecto voluptatem cupiditate dolore harum porro modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit explicabo lore ducimus itaque doloremque odio reprehenderit placeat dicta, dolor quam rem eius. Similique non nulla placeat perspiciatis, odio pariatur autem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis aw wd sdfsd fs aw ads a ssadsgfg rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas repellendus dignissimos porro quos repudiandae praesentium ipsum. </p>
       </div>
       
     </span>
   </section>
   <!-- Seccion Galleria de fotos -->
   <section id="projects"><h1>Fotos</h1>
-    <ul class="gallery">
-      <li>
-        <img class="pro-image" src="./src/portada2-300.jpg" 
+    <div class="gallery">
+      <div class="gallery-item">
+        <img class="gallery-image" src="./src/portada2-300.jpg" 
         srcset="./src/portada2-300.jpg 322w,
               ./src/portada2-650.jpg 643w,
               ./src/portada2-1250.jpg 1286w" alt="bio">
-      </li>
-      <li>
-        <img class="pro-image" src="./src/portada1-300.jpg" 
+      </div>
+      <div class="gallery-item">
+        <img class="gallery-image" src="./src/portada1-300.jpg" 
         srcset="./src/portada1-300.jpg 322w,
               ./src/portada1-650.jpg 643w,
               ./src/portada1-2500.jpg 2571w" alt="bio">
-      </li>
-      <li>
-        <img class="pro-image" src="./src/portada1-300.jpg" 
+      </div>
+      <div class="gallery-item">
+        <img class="gallery-image" src="./src/portada1-300.jpg" 
         srcset="./src/portada1-300.jpg 322w,
               ./src/portada1-650.jpg 643w,
               ./src/portada1-2500.jpg 2571w" alt="bio">
-      </li>
-      <li>
-        <img class="pro-image" src="./src/portada2-300.jpg" 
+      </div>
+      <div class="gallery-item"> 
+        <img class="gallery-image" src="./src/portada2-300.jpg" 
         srcset="./src/portada2-300.jpg 322w,
               ./src/portada2-650.jpg 643w,
               ./src/portada2-1250.jpg 1286w" alt="bio">
-      </li>
-    </ul>
+      </div>
+    </div>
   </section>
 
   <section id="contact"><h1>Contacto</h1>
