agregados margenes con queries

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   ./src/portada2-650.jpg 643w,
                   ./src/portada2-1250.jpg 1286w"
             alt="bio" >
-          Lorem ipsum dolor Esse, ipsam unde! Laborum sed, aut repudiandae amet similique, atque tempora tempore et debitis. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
+          Lorem. Lorem ipsum dolor sit amet consectetur adipisicing awuqen o amet consectetur adipisicing elit. Reiciendis quasi aspernatur modi placeat maxime debitis  andesron awdlkamdlw nam, consequuntur doloribus.</p>
         
       </div>
       <div class="item-flex2 margin-strech">
