agregado margen en biografia

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a  href="#about" >Hoja de vida </a>
         </li>
         <li id="nav-3" class="slide-out-3">
-          <a  href="#skills" >Biografía</a>
+          <a  href="#biografia" >Biografía</a>
         </li>
         <li id="nav-4" class="slide-out-4">
           <a  href="#projects" >Fotos</a>
@@ -75,7 +75,7 @@
     </span>
   </section>
   
-  <section id="skills">
+  <section id="biografia">
     <h1>Biografía</h1>
     <span class="section-container">
       <div class="item-flex2 margin-strech">
@@ -89,7 +89,7 @@
         
       </div>
       <div class="item-flex2 margin-strech">
-        <p id="item-text">Lorem ipsum dolor lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae repellendus nemo architecto ducimus, dicta quaerat iste magni fuga? Velit quia excepturi voluptate eos natus fugiat minus ut, odio debitis laudantium? sit amet consectetur adipisicing elit. Facilis quo reiciendis consequatur, corrupti animi neque magni dolore voluptatibus laboriosam ea iusto vel nostrum iure reprehenderit odit esse sit labore? Magni. ipss totam voluptas voluptatum? Repellat adipisci architecto voluptatem cupiditate dolore harum porro modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit explicabo lore ducimus itaque doloremque odio reprehenderit placeat dicta, dolor quam rem eius. Similique non nulla placeat perspiciatis, odio pariatur autem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis aw wd sdfsd fs aw ads a ssadsgfg rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas repellendus dignissimos porro quos repudiandae praesentium ipsum. </p>
+        <p id="item-text">Lorem consectetur adipisicing elit. Repudiandae repellendus nemo architecto ducimus, dicta quaerat iste magni fuga? Velit quia excepturi voluptate eos natus fugiat minus ut, odio debitis laudantium? sit amet consectetur adipisicing elit. Facilis quo reiciendis consequatur, corrupti animi neque magni dolore voluptatibus laboriosam ea iusto vel nostrum iure reprehenderit odit esse sit labore? Magni. ipss totam voluptas voluptatum? Repellat adipisci architecto voluptatem cupiditate dolore harum porro modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit explicabo lore ducimus itaque doloremque odio reprehenderit placeat dicta, dolor quam rem eius. Similique non nulla placeat perspiciatis, odio pariatur autem tempora. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, nulla velit a tenetur est doloremque dolorum debitis aw wd sdfsd fs aw ads a ssadsgfg rem libero modi quis explicabo consequatur recusandae, laboriosam tempora in vel, amet delectus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas repellendus dignissimos porro quos repudiandae praesentium ipsum. </p>
       </div>
       
     </span>
