--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <!-- Sections -->
   <section id="home">   
-    <h1 class="home-titulo">Anderson Zelarayan Navarro</h1>
+    <h1 class="home-titulo">Pagina Personal</h1>
 
   </section>
   <section id="about">
